--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,6 @@ lib64/
 parts/
 sdist/
 var/
-reference/
 *.egg-info/
 .installed.cfg
 *.egg
@@ -69,3 +68,6 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+
+# Temp files
+~$*
