--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -9,11 +9,23 @@ pipelines:
     - step:
         name: Deploy to develop
         deployment: develop
+        caches: 
+          - pip
         script: # Modify the commands below to build your repository.
           - echo "Deploying to develop environment"
           - apt-get update
           - apt-get install -y libsdl2-dev
           - pip install -r requirements.txt
+          
+          # code analysis
+          - echo "Code Metrics"
+          - radon cc -n C -s  scripts\
+          - radon  mi -m -s --min B -j  scripts\
+          - radon  raw -s  scripts\
+          - echo "Unused scripts"
+          - vulture --sort-by-size  scripts\
+          
+          # documentation
           - cd docs
           - make html
           
