--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -19,11 +19,13 @@ pipelines:
           
           # code analysis
           - echo "Code Metrics"
+          # radon giving no results.
           - radon cc -n C -s  scripts\
           - radon  mi -m -s --min B -j  scripts\
           - radon  raw -s  scripts\
           - echo "Unused scripts"
-          - vulture --sort-by-size  scripts\
+          # vulture errors
+          # - vulture --sort-by-size  scripts\
           
           # documentation
           - cd docs
