bitbucket-pipelines.yml edited online with Bitbucket

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -31,7 +31,11 @@ pipelines:
           - cd docs
           - make html
           - cd ..
+          - git add .
+          - git commit -m "Added documentation"
+          - git push
         artifacts:
           - docs/**
+
           
 
