--- a/requirements.txt
+++ b/requirements.txt
@@ -1,43 +1,54 @@
 alabaster==0.7.12
-Babel==2.6.0
-certifi==2019.3.9
-cffi==1.12.2
+autoprop==0.0.3
+Babel==2.7.0
+certifi==2019.9.11
+cffi==1.13.2
 chardet==3.0.4
 colorama==0.4.1
-coverage==4.5.3
-docutils==0.14
+coverage==5.0.1
+debugtools==0.2.0
+docutils==0.15.2
 entrypoints==0.3
-flake8==3.7.7
+flake8==3.7.9
 flake8-polyfill==1.0.2
 future==0.17.1
 idna==2.8
 imagesize==1.1.0
-Jinja2==2.10.1
+Jinja2==2.10.3
 mando==0.6.4
 MarkupSafe==1.1.1
 mccabe==0.6.1
-numpy==1.16.2
-packaging==19.0
+more-itertools==8.0.0
+numpy==1.17.2
+packaging==19.2
 pycodestyle==2.5.0
 pycparser==2.19
 pyflakes==2.1.1
-pygame==1.9.5
-Pygments==2.3.1
-pyparsing==2.3.1
-pytz==2018.9
-radon==3.0.3
-requests==2.21.0
-scipy==1.2.1
+pygame==2.0.0.dev6
+pygame-gui==0.4.2
+Pygments==2.5.2
+pyparsing==2.4.2
+pypiwin32==223
+pytz==2019.2
+pywin32==227
+radon==4.0.0
+requests==2.22.0
+scipy==1.3.1
 six==1.12.0
-snowballstemmer==1.2.1
-Sphinx==2.0.0
+snakeviz==2.0.1
+snowballstemmer==1.9.1
+Sphinx==2.3.1
+sphinx-pdj-theme==0.1.5
 sphinxcontrib-applehelp==1.0.1
 sphinxcontrib-devhelp==1.0.1
 sphinxcontrib-htmlhelp==1.0.1
 sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.2
 sphinxcontrib-serializinghtml==1.1.3
-sphinx-pdj-theme==0.1.5
-tcod==10.0.0
+stringify==0.1.1
+tcod==11.6.0
+tornado==6.0.3
 urllib3==1.24.1
-vulture==1.0
+vecrec==0.3.0
+vulture==1.2
+
