--- a/requirements.txt
+++ b/requirements.txt
@@ -1,54 +1,7 @@
-alabaster==0.7.12
-autoprop==0.0.3
-Babel==2.7.0
-certifi==2019.9.11
-cffi==1.13.2
-chardet==3.0.4
-colorama==0.4.1
-coverage==5.0.1
-debugtools==0.2.0
-docutils==0.15.2
-entrypoints==0.3
-flake8==3.7.9
-flake8-polyfill==1.0.2
-future==0.17.1
-idna==2.8
-imagesize==1.1.0
-Jinja2==2.10.3
-mando==0.6.4
-MarkupSafe==1.1.1
-mccabe==0.6.1
-more-itertools==8.0.0
-numpy==1.17.2
-packaging==19.2
-pycodestyle==2.5.0
-pycparser==2.19
-pyflakes==2.1.1
+sphinx_pdj_theme==0.1.5
 pygame==2.0.0.dev6
-pygame-gui==0.4.2
-Pygments==2.5.2
-pyparsing==2.4.2
-pypiwin32==223
-pytz==2019.2
-pywin32==227
-radon==4.0.0
-requests==2.22.0
 scipy==1.3.1
-six==1.12.0
-snakeviz==2.0.1
-snowballstemmer==1.9.1
-Sphinx==2.3.1
-sphinx-pdj-theme==0.1.5
-sphinxcontrib-applehelp==1.0.1
-sphinxcontrib-devhelp==1.0.1
-sphinxcontrib-htmlhelp==1.0.1
-sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==1.0.2
-sphinxcontrib-serializinghtml==1.1.3
-stringify==0.1.1
+pygame_gui==0.4.2
 tcod==11.6.0
-tornado==6.0.3
-urllib3==1.24.1
-vecrec==0.3.0
-vulture==1.2
-
+dataclasses==0.7
+mock==3.0.5
