--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 alabaster==0.7.12
+atpublic==1.0
 autoprop==0.0.3
 Babel==2.7.0
 certifi==2019.9.11
@@ -10,9 +11,10 @@ debugtools==0.2.0
 docopt==0.6.2
 docutils==0.15.2
 entrypoints==0.3
+esper==1.3
 flake8==3.7.9
 flake8-polyfill==1.0.2
-future==0.17.1
+future==0.18.2
 idna==2.8
 imagesize==1.1.0
 Jinja2==2.10.3
@@ -30,24 +32,26 @@ pygame==2.0.0.dev6
 pygame-gui==0.4.2
 Pygments==2.5.2
 pyparsing==2.4.2
-radon==4.0.0
+pytz==2019.3
+radon==4.1.0
 requests==2.22.0
 scipy==1.3.1
 six==1.12.0
 snakeviz==2.0.1
-snowballstemmer==1.9.1
-Sphinx==2.3.1
-sphinx-pdj-theme==0.1.5
+snowballstemmer==2.0.0
+Sphinx==2.4.3
+sphinx-autodoc-typehints==1.10.3
+sphinx-pdj-theme==0.1.6
 sphinxcontrib-applehelp==1.0.1
 sphinxcontrib-devhelp==1.0.1
-sphinxcontrib-htmlhelp==1.0.1
+sphinxcontrib-htmlhelp==1.0.3
 sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.2
 sphinxcontrib-serializinghtml==1.1.3
 stringify==0.1.1
-tcod==11.6.0
+tcod==11.9.0
 tornado==6.0.3
 urllib3==1.24.1
 vecrec==0.3.0
-vulture==1.2
+vulture==1.3
 yarg==0.1.9
