--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ mando==0.6.4
 MarkupSafe==1.1.1
 mccabe==0.6.1
 more-itertools==8.0.0
+mypy==0.761
 numpy==1.17.2
 packaging==19.2
 pipreqs==0.4.10
