updated actions and requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,59 +1,38 @@
 alabaster==0.7.12
-atpublic==1.0
-autoprop==0.0.3
-Babel==2.7.0
-certifi==2019.9.11
-cffi==1.13.2
+Babel==2.8.0
+certifi==2019.11.28
+cffi==1.14.0
 chardet==3.0.4
-colorama==0.4.1
-coverage==5.0.1
-debugtools==0.2.0
-docopt==0.6.2
-docutils==0.15.2
-entrypoints==0.3
-esper==1.3
-flake8==3.7.9
-flake8-polyfill==1.0.2
-future==0.18.2
-idna==2.8
-imagesize==1.1.0
-Jinja2==2.10.3
-mando==0.6.4
+colorama==0.4.3
+docutils==0.16
+idna==2.9
+imagesize==1.2.0
+Jinja2==2.11.1
 MarkupSafe==1.1.1
-mccabe==0.6.1
-more-itertools==8.0.0
-mypy==0.761
-numpy==1.17.2
-packaging==19.2
-pipreqs==0.4.10
-pycodestyle==2.5.0
-pycparser==2.19
-pyflakes==2.1.1
-pygame==2.0.0.dev6
-pygame-gui==0.4.2
-Pygments==2.5.2
-pyparsing==2.4.2
-pytweening==1.0.3
+mypy==0.770
+mypy-extensions==0.4.3
+numpy==1.18.2
+packaging==20.3
+pycparser==2.20
+pygame==1.9.6
+pygame-gui==0.5.1
+Pygments==2.6.1
+pyparsing==2.4.6
+PyTweening==1.0.3
 pytz==2019.3
-radon==4.1.0
-requests==2.22.0
-scipy==1.3.1
-six==1.12.0
-snakeviz==2.0.1
+requests==2.23.0
+scipy==1.4.1
+six==1.14.0
+snecs==1.0.0
 snowballstemmer==2.0.0
-Sphinx==2.4.3
-sphinx-autodoc-typehints==1.10.3
-sphinx-pdj-theme==0.1.6
-sphinxcontrib-applehelp==1.0.1
-sphinxcontrib-devhelp==1.0.1
+Sphinx==2.4.4
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-devhelp==1.0.2
 sphinxcontrib-htmlhelp==1.0.3
 sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==1.0.2
-sphinxcontrib-serializinghtml==1.1.3
-stringify==0.1.1
-tcod==11.9.0
-tornado==6.0.3
-urllib3==1.24.2
-vecrec==0.3.0
-vulture==1.3
-yarg==0.1.9
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.4
+tcod==11.10.0
+typed-ast==1.4.1
+typing-extensions==3.7.4.1
+urllib3==1.25.8
