upgraded to pygame_gui 0.5.1

--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ mypy-extensions==0.4.3
 numpy==1.18.2
 packaging==20.3
 pycparser==2.20
-pygame==1.9.6
+pygame==2.0.0dev6
 pygame-gui==0.5.1
 Pygments==2.6.1
 pyparsing==2.4.6
