--- a/.github/workflows/nqp.yml
+++ b/.github/workflows/nqp.yml
@@ -8,14 +8,17 @@ jobs:
   build:
 
     runs-on: windows-latest
+    strategy:
+      matrix:
+        python-version: [3.7, 3.8]
 
     steps:
     # set up python
     - uses: actions/checkout@v2
-    - name: Set up Python 3.8
-      uses: actions/setup-python@v1
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v2
       with:
-        python-version: 3.8
+        python-version: ${{ matrix.python-version }}
 
     - name: Cache dependencies
       uses: actions/cache@v1
@@ -32,14 +35,33 @@ jobs:
     # install libraries
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        python -m pip install --upgrade poetry
+        poetry install
     
-    # run mypy
-    - name: Check typing with mypy
+  style:
+    needs: build
+    steps:
+    - name: Run style checker
       run: |
-        mypy scripts/
-#
+        black
+
+  lint:
+    needs: build
+    - name: Run static linter
+      run: |
+        # stop the build if there are Python syntax errors or undefined names
+        mypy
+
+  test:
+    needs: build
+    - name: Test with pytest
+      run: |
+        pytest
+
+
+
+
+
 #    # generate change log
 #    - name: Checkout
 #      uses: actions/checkout@v2
