--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ sphinx = "^3.0.4"
 mypy = "^0.780"
 vulture = "^1.5"
 isort = "^4.3.21"
+black = "^19.10b0"
+pytest = "^5.4.3"
 
 [build-system]
 requires = ["poetry>=0.12"]
