--- a/.github/workflows/nqp.yml
+++ b/.github/workflows/nqp.yml
@@ -40,6 +40,7 @@ jobs:
     
   style:
     needs: build
+    runs-on: windows-latest
     steps:
     - name: Run style checker
       run: |
@@ -47,6 +48,8 @@ jobs:
 
   lint:
     needs: build
+    runs-on: windows-latest
+    steps:
     - name: Run static linter
       # stop the build if there are Python syntax errors or undefined names
       run: |
@@ -54,6 +57,8 @@ jobs:
 
   test:
     needs: build
+    runs-on: windows-latest
+    steps:
     - name: Test with pytest
       run: |
         pytest
