--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ isort = "^4.3.21"
 black = "^19.10b0"
 pytest = "^5.4.3"
 sphinx_autodoc_typehints = "^1.11.0"
+radon = "^4.1.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
