--- a/.github/workflows/nqp.yml
+++ b/.github/workflows/nqp.yml
@@ -2,7 +2,11 @@ name: Not Quite Paradise
 
 on:
   push:
-    branches: [ develop develop-github-actions ]
+    branches:
+      - develop
+  pull_request:
+    branches:
+      - develop
 
 jobs:
   build:
@@ -44,7 +48,7 @@ jobs:
     steps:
     - name: Run style checker
       run: |
-        black
+        python -m black
 
   lint:
     needs: build
@@ -53,7 +57,7 @@ jobs:
     - name: Run static linter
       # stop the build if there are Python syntax errors or undefined names
       run: |
-        mypy scripts/
+        python -m mypy scripts/
 
   test:
     needs: build
@@ -61,28 +65,22 @@ jobs:
     steps:
     - name: Test with pytest
       run: |
-        pytest
+        python -m pytest
+      
+  docs:
+    runs-on: windows-latest
+    needs: build
+    steps:
 
-
-
-#    # sphinx
-#    - name: Build Sphinx docs
-#      run: |
-#        git clone https://github.com/ammaraskar/sphinx-action-test.git --branch gh-pages --single-branch gh-pages
-#        cp -r docs/_build/html/* gh-pages/
-#        cd gh-pages
-#        git config --local user.email "action@github.com"
-#        git config --local user.name "GitHub Action"
-#        git add .
-#        git commit -m "Update documentation" -a || true
-#        # The above command will fail if no changes were present, so we ignore
-#        # the return code.
-#
-#    # update github pages
-#    - name: Push changes to GitHub Pages
-#      uses: ad-m/github-push-action@master
-#      with:
-#        branch: gh-pages
-#        directory: gh-pages
-#        github_token: ${{ secrets.GITHUB_TOKEN }}
-
+      - name: build-docs
+      - uses: actions/checkout@v1
+      - uses: ammaraskar/sphinx-action@master
+        with:
+            docs-folder: "docs/"
+          
+      - name: deploy-docs
+        uses: JamesIves/github-pages-deploy-action@3.5.7
+        with:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          BRANCH: gh-pages
+          FOLDER: docs
