--- a/.github/workflows/nqp.yml
+++ b/.github/workflows/nqp.yml
@@ -73,8 +73,7 @@ jobs:
     steps:
 
       - name: build-docs
-      - uses: actions/checkout@v1
-      - uses: ammaraskar/sphinx-action@master
+        uses: ammaraskar/sphinx-action@0.4
         with:
             docs-folder: "docs/"
           
