--- a/.github/workflows/nqp.yml
+++ b/.github/workflows/nqp.yml
@@ -39,7 +39,7 @@ jobs:
     # install libraries
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade poetry
+        py -3.8 -m pip install --upgrade poetry
         poetry install
     
   style:
@@ -48,7 +48,7 @@ jobs:
     steps:
     - name: Run style checker
       run: |
-        python -m black
+        py -3.8 -m black
 
   lint:
     needs: build
@@ -57,7 +57,7 @@ jobs:
     - name: Run static linter
       # stop the build if there are Python syntax errors or undefined names
       run: |
-        python -m mypy scripts/
+        py -3.8 -m mypy scripts/
 
   test:
     needs: build
@@ -65,10 +65,10 @@ jobs:
     steps:
     - name: Test with pytest
       run: |
-        python -m pytest
+        py -3.8 -m pytest
       
   docs:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     needs: build
     steps:
 
