--- a/.github/workflows/nqp.yml
+++ b/.github/workflows/nqp.yml
@@ -17,7 +17,6 @@ jobs:
         python-version: [3.8]
 
     steps:
-    # set up python
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
@@ -36,33 +35,20 @@ jobs:
           ${{ runner.os }}-build-
           ${{ runner.os }}-
 
-    # install libraries
     - name: Install dependencies
       run: |
         py -3.8 -m pip install --upgrade poetry
         poetry install
     
-  style:
-    needs: build
-    runs-on: windows-latest
-    steps:
     - name: Run style checker
       run: |
         py -3.8 -m black
 
-  lint:
-    needs: build
-    runs-on: windows-latest
-    steps:
     - name: Run static linter
       # stop the build if there are Python syntax errors or undefined names
       run: |
         py -3.8 -m mypy scripts/
 
-  test:
-    needs: build
-    runs-on: windows-latest
-    steps:
     - name: Test with pytest
       run: |
         py -3.8 -m pytest
@@ -75,7 +61,7 @@ jobs:
       - name: build-docs
         uses: ammaraskar/sphinx-action@0.4
         with:
-            docs-folder: "docs/"
+            docs-folder: "."
           
       - name: deploy-docs
         uses: JamesIves/github-pages-deploy-action@3.5.7
