--- a/.github/workflows/nqp.yml
+++ b/.github/workflows/nqp.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   build:
-
+    name: build & test
     runs-on: windows-latest
     strategy:
       matrix:
@@ -38,7 +38,7 @@ jobs:
     - name: Install dependencies
       run: |
         py -3.8 -m pip install --upgrade poetry
-        poetry install
+        py -3.8 -m poetry install
     
     - name: Run style checker
       run: |
@@ -55,7 +55,6 @@ jobs:
       
   docs:
     runs-on: ubuntu-latest
-    needs: build
     steps:
 
       - name: build-docs
