--- a/.github/workflows/nqp.yml
+++ b/.github/workflows/nqp.yml
@@ -49,7 +49,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-      - uses: actions/checkout@v2
+        uses: actions/checkout@v2
       - name: build-docs
         uses: ammaraskar/sphinx-action@0.4
         with:
