--- a/.github/workflows/nqp.yml
+++ b/.github/workflows/nqp.yml
@@ -26,25 +26,25 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade poetry
-        python -m poetry install
+        poetry install --no-root
         
     - name: test
       run: |
-        python -V
-        python -m pip list
+        poetry run python -V
+        poetry run python -m pip list
     
     - name: Run style checker
       run: |
-        python -m black
+        poetry run python -m black
 
     - name: Run static linter
       # stop the build if there are Python syntax errors or undefined names
       run: |
-        python -m mypy scripts/
+        poetry run python -m mypy scripts/
 
     - name: Test with pytest
       run: |
-        python -m pytest
+        poetry run python -m pytest
       
   docs:
     runs-on: ubuntu-latest
