--- a/.github/workflows/nqp.yml
+++ b/.github/workflows/nqp.yml
@@ -24,20 +24,16 @@ jobs:
         python-version: ${{ matrix.python-version }}
         
     - name: Cache dependencies
-      uses: actions/cache@v1
-      env:
-        cache-name: cache-python-deps
+      uses: actions/cache@v2
       with:
-        path: .github/cache/
-        key: ${{ runner.os }}-build-${{ env.cache-name }}
-        restore-keys: |
-          ${{ runner.os }}-build-${{ env.cache-name }}
-          ${{ runner.os }}-build-
-          ${{ runner.os }}-
+        path: ~\AppData\Local\pip\Cache
+        key: ${{ runner.os }}-pip-${{ hashFiles('**/poetry.lock') }}
+        restore-keys: ${{ runner.os }}-pip-
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade poetry
+        poetry config virtualenvs.create false
         poetry install --no-root
 
   style:
