--- a/.github/workflows/nqp.yml
+++ b/.github/workflows/nqp.yml
@@ -40,6 +40,15 @@ jobs:
     needs: build
     runs-on: windows-latest
     steps:
+    - name: Use cache
+      uses: actions/cache@v2
+      with:
+        path: ~\AppData\Local\pip\Cache
+        key: ${{ runner.os }}-pip-${{ hashFiles('**/poetry.lock') }}
+        restore-keys: ${{ runner.os }}-pip-
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade poetry
     - name: Run style checker
       run: |
         poetry run python -m black scripts/
@@ -48,6 +57,15 @@ jobs:
     needs: build
     runs-on: windows-latest
     steps:
+    - name: Use cache
+      uses: actions/cache@v2
+      with:
+        path: ~\AppData\Local\pip\Cache
+        key: ${{ runner.os }}-pip-${{ hashFiles('**/poetry.lock') }}
+        restore-keys: ${{ runner.os }}-pip-
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade poetry
     - name: Run static linter
       run: |
         poetry run python -m mypy scripts/
@@ -56,6 +74,15 @@ jobs:
     needs: build
     runs-on: windows-latest
     steps:
+    - name: Use cache
+      uses: actions/cache@v2
+      with:
+        path: ~\AppData\Local\pip\Cache
+        key: ${{ runner.os }}-pip-${{ hashFiles('**/poetry.lock') }}
+        restore-keys: ${{ runner.os }}-pip-
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade poetry
     - name: Test with pytest
       run: |
         poetry run python -m pytest
@@ -64,6 +91,14 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
+      - name: Use cache
+        uses: actions/cache@v2
+        with:
+          path: ~\AppData\Local\pip\Cache
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/poetry.lock') }}
+          restore-keys: ${{ runner.os }}-pip-
+      - name: Install dependencies
+        run: python -m pip install --upgrade poetry
       - name: Checkout
         uses: actions/checkout@v2
       - name: build-docs
