--- a/.github/workflows/nqp.yml
+++ b/.github/workflows/nqp.yml
@@ -15,6 +15,8 @@ jobs:
     strategy:
       matrix:
         python-version: [3.8]
+        command: ['', 'poetry run python -m black scripts/', 'poetry run python -m mypy scripts/', 'poetry run python -m pytest']
+        name: ['build', 'style', 'lint', 'test']
 
     steps:
     - uses: actions/checkout@v2
@@ -35,58 +37,9 @@ jobs:
         python -m pip install --upgrade poetry
         poetry config virtualenvs.create false
         poetry install --no-root
+    - name: ${{ matrix.name }}
+      run: ${{ matrix.command }}
 
-  style:
-    needs: build
-    runs-on: windows-latest
-    steps:
-    - name: Use cache
-      uses: actions/cache@v2
-      with:
-        path: ~\AppData\Local\pip\Cache
-        key: ${{ runner.os }}-pip-${{ hashFiles('**/poetry.lock') }}
-        restore-keys: ${{ runner.os }}-pip-
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade poetry
-    - name: Run style checker
-      run: |
-        poetry run python -m black scripts/
-
-  lint:
-    needs: build
-    runs-on: windows-latest
-    steps:
-    - name: Use cache
-      uses: actions/cache@v2
-      with:
-        path: ~\AppData\Local\pip\Cache
-        key: ${{ runner.os }}-pip-${{ hashFiles('**/poetry.lock') }}
-        restore-keys: ${{ runner.os }}-pip-
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade poetry
-    - name: Run static linter
-      run: |
-        poetry run python -m mypy scripts/
-
-  test:
-    needs: build
-    runs-on: windows-latest
-    steps:
-    - name: Use cache
-      uses: actions/cache@v2
-      with:
-        path: ~\AppData\Local\pip\Cache
-        key: ${{ runner.os }}-pip-${{ hashFiles('**/poetry.lock') }}
-        restore-keys: ${{ runner.os }}-pip-
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade poetry
-    - name: Test with pytest
-      run: |
-        poetry run python -m pytest
-      
   docs:
     needs: build
     runs-on: ubuntu-latest
@@ -98,7 +51,10 @@ jobs:
           key: ${{ runner.os }}-pip-${{ hashFiles('**/poetry.lock') }}
           restore-keys: ${{ runner.os }}-pip-
       - name: Install dependencies
-        run: python -m pip install --upgrade poetry
+        run: |
+          python -m pip install --upgrade poetry
+          poetry config virtualenvs.create false
+          poetry install --no-root
       - name: Checkout
         uses: actions/checkout@v2
       - name: build-docs
