--- a/.github/workflows/nqp.yml
+++ b/.github/workflows/nqp.yml
@@ -13,6 +13,7 @@ jobs:
     name: ${{ matrix.name }}
     runs-on: windows-latest
     strategy:
+      fail-fast: false
       matrix:
         include:
         - name: build
@@ -52,6 +53,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Install linux deps
+        run: |
+            sudo apt install python3-setuptools
       - name: Set up Python 3.8
         uses: actions/setup-python@v2
         with:
