--- a/.github/workflows/nqp.yml
+++ b/.github/workflows/nqp.yml
@@ -53,9 +53,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Install linux deps
-        run: |
-            sudo apt install python3-setuptools
       - name: Set up Python 3.8
         uses: actions/setup-python@v2
         with:
@@ -68,9 +65,7 @@ jobs:
           restore-keys: ${{ runner.os }}-pip-
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade poetry
-          python -m poetry config virtualenvs.create false
-          python -m poetry install --no-root
+          python -m pip install sphinx-autodoc-typehints
       - name: build-docs
         uses: ammaraskar/sphinx-action@0.4
         with:
