--- a/.github/workflows/nqp.yml
+++ b/.github/workflows/nqp.yml
@@ -78,4 +78,4 @@ jobs:
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BRANCH: gh-pages
-          FOLDER: docs/_build
+          FOLDER: docs/_build/html
