--- a/.github/workflows/nqp.yml
+++ b/.github/workflows/nqp.yml
@@ -11,7 +11,7 @@ jobs:
       matrix:
         include:
         - name: build
-          command: python -V
+          command: poetry build
           python-version: 3.8
         - name: lint
           command: poetry run python -m mypy scripts/
