--- a/.github/workflows/nqp.yml
+++ b/.github/workflows/nqp.yml
@@ -1,102 +1,40 @@
 name: Not Quite Paradise
 
-on:
-  push:
-    branches: [ develop ]
+on: [push]
 
 jobs:
   build:
-
+    name: ${{ matrix.name }}
     runs-on: windows-latest
     strategy:
+      fail-fast: false
       matrix:
-        python-version: [3.8]
+        include:
+        - name: lint
+          command: poetry run python -m mypy scripts/
+          python-version: 3.8
+        - name: test
+          command: poetry run python -m pytest
+          python-version: 3.8
 
     steps:
-    # set up python
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-
+        
     - name: Cache dependencies
-      uses: actions/cache@v1
-      env:
-        cache-name: cache-python-deps
+      uses: actions/cache@v2
       with:
-        path: .github/cache/
-        key: ${{ runner.os }}-build-${{ env.cache-name }}
-        restore-keys: |
-          ${{ runner.os }}-build-${{ env.cache-name }}
-          ${{ runner.os }}-build-
-          ${{ runner.os }}-
+        path: ~\AppData\Local\pip\Cache
+        key: ${{ runner.os }}-pip-${{ hashFiles('**/poetry.lock') }}
+        restore-keys: ${{ runner.os }}-pip-
 
-    # install libraries
     - name: Install dependencies
       run: |
         python -m pip install --upgrade poetry
-        poetry install
-    
-  lint:
-    needs: build
-    runs-on: windows-latest
-    steps:
-    - name: Run static linter
-      # stop the build if there are Python syntax errors or undefined names
-      run: |
-        mypy scripts/
-
-  test:
-    needs: build
-    runs-on: windows-latest
-    steps:
-    - name: Test with pytest
-      run: |
-        pytest
-
-
-
-
-
-#    # generate change log
-#    - name: Checkout
-#      uses: actions/checkout@v2
-#    - name: Generate changelog
-#      id: changelog
-#      uses: metcalfc/changelog-generator@v0.2.3
-#      with:
-#        myToken: ${{ secrets.GITHUB_TOKEN }}
-#    - name: Create Release
-#      id: create_release
-#      uses: actions/create-release@latest
-#      env:
-#        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#      with:
-#        tag_name: ${{ github.ref }}
-#        release_name: Release ${{ github.ref }}
-#        body: ${{ steps.changelog.outputs.changelog }}
-#        draft: false
-#        prerelease: false
-#
-#    # sphinx
-#    - name: Build Sphinx docs
-#      run: |
-#        git clone https://github.com/ammaraskar/sphinx-action-test.git --branch gh-pages --single-branch gh-pages
-#        cp -r docs/_build/html/* gh-pages/
-#        cd gh-pages
-#        git config --local user.email "action@github.com"
-#        git config --local user.name "GitHub Action"
-#        git add .
-#        git commit -m "Update documentation" -a || true
-#        # The above command will fail if no changes were present, so we ignore
-#        # the return code.
-#
-#    # update github pages
-#    - name: Push changes to GitHub Pages
-#      uses: ad-m/github-push-action@master
-#      with:
-#        branch: gh-pages
-#        directory: gh-pages
-#        github_token: ${{ secrets.GITHUB_TOKEN }}
-
+        poetry config virtualenvs.create false
+        poetry install --no-root
+    - name: ${{ matrix.name }}
+      run: ${{ matrix.command }}
