--- a/.github/workflows/nqp-docs.yml
+++ b/.github/workflows/nqp-docs.yml
@@ -1,9 +1,6 @@
 name: Not Quite Paradise
 
-on:
-  push:
-    branches:
-      - develop
+on: [push]
 
 jobs:
   docs:
@@ -28,6 +25,7 @@ jobs:
           python -m pip install sphinx-autodoc-typehints
       - name: build-docs
         run: |
+          sphinx-apidoc -o ./docs .
           cd docs
           make html
           make clean
