--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,3 +26,13 @@ radon = "^4.1.0"
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
+
+[tool.isort]
+multi_line_output = 3
+include_trailing_comma = true
+force_grid_wrap = 0
+use_parentheses = true
+line_length = 79
+known_third_party = [""]
+force_to_top = ["typing, __future__"]
+
