--- a/mypy.ini
+++ b/mypy.ini
@@ -5,7 +5,7 @@ warn_return_any = False
 warn_unused_configs = True
 warn_redundant_casts = True
 warn_unused_ignores  = True
-warn_unreachable  = True
+warn_unreachable  = False
 show_error_context  = False
 pretty  = False
 
