--- a/.github/workflows/nqp-docs.yml
+++ b/.github/workflows/nqp-docs.yml
@@ -1,11 +1,11 @@
 name: NQP - Build Docs
 
-on:
-  workflow_run:
-    workflows: ["NQP - Run Tests"]
-    branches: [develop, master]
-    types:
-      - completed
+on: [push]
+#  workflow_run:
+#    workflows: ["NQP - Run Tests"]
+#    branches: [develop, master]
+#    types:
+#      - completed
 
 jobs:
   docs:
@@ -13,21 +13,28 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+
       - name: Set up Python 3.8
         uses: actions/setup-python@v2
         with:
           python-version: 3.8
+
       - name: Use cache
         uses: actions/cache@v2
         with:
           path: ~\AppData\Local\pip\Cache
           key: ${{ runner.os }}-pip-${{ hashFiles('**/poetry.lock') }}
           restore-keys: ${{ runner.os }}-pip-
+
       - name: Install dependencies
         run: |
           sudo apt-get update
+          sudo apt-get install libsdl2-dev
           sudo apt-get install python-sphinx
-          python -m pip install sphinx-autodoc-typehints
+          python -m pip install --upgrade poetry
+          poetry config virtualenvs.create false
+          poetry install --no-root
+
       - name: build-docs
         run: |
           sphinx-apidoc -o ./docs .
