--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,10 +22,10 @@ black = "^19.10b0"
 pytest = "^5.4.3"
 sphinx_autodoc_typehints = "^1.11.0"
 radon = "^4.1.0"
-
-[build-system]
-requires = ["poetry>=0.12"]
-build-backend = "poetry.masonry.api"
+sphinx-autodoc-annotation = "^1.0-1"
+sphinx-autodoc-typehints = "^1.11.0"
+sphinx-git = "^11.0.0"
+sphinx-rtd-theme = "^0.5.0"
 
 [tool.isort]
 multi_line_output = 3
@@ -35,4 +35,8 @@ use_parentheses = true
 line_length = 79
 known_third_party = [""]
 force_to_top = ["typing, __future__"]
+
+[build-system]
+requires = ["poetry>=0.12"]
+build-backend = "poetry.masonry.api"
 
