--- a/.github/workflows/nqp.yml
+++ b/.github/workflows/nqp.yml
@@ -24,17 +24,17 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
-#    - name: Cache dependencies
-#      uses: actions/cache@v2
-#      with:
-#        path: ~\AppData\Local\pip\Cache
-#        key: ${{ runner.os }}-pip-${{ hashFiles('**/poetry.lock') }}
-#        restore-keys: ${{ runner.os }}-pip-
-#
-#    - name: Install dependencies
-#      run: |
-#        python -m pip install --upgrade poetry
-#        poetry config virtualenvs.create false
-#        poetry install --no-root
-#    - name: ${{ matrix.name }}
-#      run: ${{ matrix.command }}
+    - name: Cache dependencies
+      uses: actions/cache@v2
+      with:
+        path: ~\AppData\Local\pip\Cache
+        key: ${{ runner.os }}-pip-${{ hashFiles('**/poetry.lock') }}
+        restore-keys: ${{ runner.os }}-pip-
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade poetry
+        poetry config virtualenvs.create false
+        poetry install --no-root
+    - name: ${{ matrix.name }}
+      run: ${{ matrix.command }}
