--- a/.github/workflows/nqp.yml
+++ b/.github/workflows/nqp.yml
@@ -24,6 +24,10 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
+    - name: Locate Pip Cache
+      id: pip-cache
+      run: echo "::set-output name=dir::$(pip cache dir)"
+
     - name: Cache dependencies
       uses: actions/cache@v2
       with:
