--- a/.github/workflows/nqp.yml
+++ b/.github/workflows/nqp.yml
@@ -31,7 +31,7 @@ jobs:
     - name: Cache dependencies
       uses: actions/cache@v2
       with:
-        path: ~\AppData\Local\pip\Cache
+        path: ${{ steps.pip-cache.outputs.dir }}
         key: ${{ runner.os }}-pip-${{ hashFiles('**/poetry.lock') }}
         restore-keys: ${{ runner.os }}-pip-
 
