--- a/.github/workflows/nqp-docs.yml
+++ b/.github/workflows/nqp-docs.yml
@@ -20,6 +20,10 @@ jobs:
           python-version: 3.8
 
       - name: Use cache
+      - name: Locate Pip Cache
+        id: pip-cache
+        run: echo "::set-output name=dir::$(pip cache dir)"
+
         uses: actions/cache@v2
         with:
           path: ~\AppData\Local\pip\Cache
