--- a/.github/workflows/nqp-docs.yml
+++ b/.github/workflows/nqp-docs.yml
@@ -26,7 +26,7 @@ jobs:
 
         uses: actions/cache@v2
         with:
-          path: ~\AppData\Local\pip\Cache
+          path: ${{ steps.pip-cache.outputs.dir }}
           key: ${{ runner.os }}-pip-${{ hashFiles('**/poetry.lock') }}
           restore-keys: ${{ runner.os }}-pip-
 
