--- a/.github/workflows/nqp-docs.yml
+++ b/.github/workflows/nqp-docs.yml
@@ -19,11 +19,11 @@ jobs:
         with:
           python-version: 3.8
 
-      - name: Use cache
       - name: Locate Pip Cache
         id: pip-cache
         run: echo "::set-output name=dir::$(pip cache dir)"
 
+      - name: Cache dependencies
         uses: actions/cache@v2
         with:
           path: ${{ steps.pip-cache.outputs.dir }}
