--- a/.github/workflows/nqp.yml
+++ b/.github/workflows/nqp.yml
@@ -18,16 +18,22 @@ jobs:
           python-version: 3.8
 
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout
+      uses: actions/checkout@v2
+
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
 
+    - name: Locate Pip Cache
+      id: pip-cache
+      run: echo "::set-output name=dir::$(pip cache dir)"
+
     - name: Cache dependencies
       uses: actions/cache@v2
       with:
-        path: ~\AppData\Local\pip\Cache
+        path: ${{ steps.pip-cache.outputs.dir }}
         key: ${{ runner.os }}-pip-${{ hashFiles('**/poetry.lock') }}
         restore-keys: ${{ runner.os }}-pip-
 
@@ -36,5 +42,6 @@ jobs:
         python -m pip install --upgrade poetry
         poetry config virtualenvs.create false
         poetry install --no-root
+
     - name: ${{ matrix.name }}
       run: ${{ matrix.command }}
