updated CI to flag no video/audio driver

--- a/.github/workflows/nqp-docs.yml
+++ b/.github/workflows/nqp-docs.yml
@@ -8,6 +8,10 @@ on:
       - completed
 
 jobs:
+  env:
+    SDL_VIDEODRIVER: dummy
+    SDL_AUDIODRIVER: disk
+    
   docs:
     runs-on: ubuntu-latest
     steps:
