--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ vulture = "^1.5"
 isort = "^4.3.21"
 black = "^19.10b0"
 pytest = "^5.4.3"
+pytest-cov = "^2.10.1"
 sphinx_autodoc_typehints = "^1.11.0"
 radon = "^4.1.0"
 sphinx-autodoc-annotation = "^1.0-1"
