updated github actions

--- a/.github/workflows/nqp_docs.yml
+++ b/.github/workflows/nqp_docs.yml
@@ -2,7 +2,7 @@ name: NQP - Build Docs
 
 on:
   workflow_run:
-    workflows: ["NQP - Run Tests"]
+    workflows: ["NQP - Lint and Test"]
     branches: [develop, master]
     types:
       - completed
