--- a/.github/workflows/nqp_lint_test_write.yml
+++ b/.github/workflows/nqp_lint_test_write.yml
@@ -11,9 +11,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-
-    - name: Set up Python v3.8
-      uses: actions/setup-python@v2
+    - uses: actions/setup-python@v2
       with:
         python-version: 3.8
 
@@ -25,9 +23,9 @@ jobs:
         restore-keys: ${{ runner.os }}-poetry-
 
     - name: Run image
-        uses: abatilo/actions-poetry@v2.0.0
-        with:
-          poetry-version: 1.0
+      uses: abatilo/actions-poetry@v2.0.0
+      with:
+        poetry-version: 1.0
 
 #    - name: Install dependencies
 #      run: |
