--- a/.github/workflows/nqp_lint_test_write.yml
+++ b/.github/workflows/nqp_lint_test_write.yml
@@ -33,10 +33,10 @@ jobs:
 #        poetry config virtualenvs.create false
 #        poetry install --no-root
 
-    - name: black
-      uses: lgeiger/black-action@v1.0.1
-      with:
-        args: .
+    - name: Lint with Black
+      if: always()
+      run: |
+        python -m black -l=120 t=3.8 scripts/
 
     - name: mypy Type Check
       run: |
