--- a/.github/workflows/nqp_lint_test_write.yml
+++ b/.github/workflows/nqp_lint_test_write.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   build:
-    name: Build Environment
+    name: Lint and Test (Write)
     runs-on: windows-latest
 
     steps:
@@ -36,7 +36,7 @@ jobs:
     - name: Lint with Black
       if: always()
       run: |
-        python -m black -l=120 t=3.8 scripts/
+        python -m black scripts/
 
     - name: mypy Type Check
       run: |
