--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,11 @@ sphinx-autodoc-typehints = "^1.11.0"
 sphinx-git = "^11.0.0"
 sphinx-rtd-theme = "^0.5.0"
 
+[tool.black]
+target-version = py38
+line-length = 120
+
+
 [tool.isort]
 multi_line_output = 3
 include_trailing_comma = true
