update github action

--- a/.github/workflows/nqp_lint_test_read.yml
+++ b/.github/workflows/nqp_lint_test_read.yml
@@ -1,9 +1,9 @@
 name: NQP - Feature Check - Test (Read Only)
 
 on:
-  push:
-    branches:
-      - "feature/**"
+  pull_request:
+    types: [opened, edited]
+
 
 jobs:
   build:
