update type in github action

--- a/.github/workflows/nqp_lint_test_read.yml
+++ b/.github/workflows/nqp_lint_test_read.yml
@@ -2,7 +2,7 @@ name: NQP - Feature Check - Test (Read Only)
 
 on:
   pull_request:
-    types: [opened, edited]
+    types: [opened, edited, synchronize]
 
 
 jobs:
