--- a/.github/workflows/nqp_lint_test_read.yml
+++ b/.github/workflows/nqp_lint_test_read.yml
@@ -1,13 +1,11 @@
-name: NQP - Feature Check - Test (Read Only)
+name: NQP - Feature Check - Run Tests (Read)
 
-on:
-  pull_request:
-    types: [opened, edited, synchronize]
+on: push
 
 
 jobs:
   build:
-    name: Lint and Test (Read Only)
+    name: Run Tests (Read)
     runs-on: windows-latest
 
     steps:
@@ -16,12 +14,16 @@ jobs:
       with:
         python-version: 3.8
 
+    - name: Locate Pip Cache
+      id: pip-cache
+      run: echo "::set-output name=dir::$(pip cache dir)"
+
     - name: Cache dependencies
       uses: actions/cache@v2
       with:
-        path: ~\AppData\Local\pip\Cache
-        key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
-        restore-keys: ${{ runner.os }}-poetry-
+        path: ${{ steps.pip-cache.outputs.dir }}
+        key: ${{ runner.os }}-pip-${{ hashFiles('**/poetry.lock') }}
+        restore-keys: ${{ runner.os }}-pip-
 
     - name: Install dependencies
       run: |
