added isort to gh actions

--- a/.github/workflows/nqp_lint_test_read.yml
+++ b/.github/workflows/nqp_lint_test_read.yml
@@ -1,9 +1,7 @@
 name: NQP - Feature Check - Run Tests (Read)
 
 on: push
-  branches-ignore:
-    - 'feature/**'
-    - master
+  branches-ignore: [develop, master]
 
 
 jobs:
