--- a/.gitignore
+++ b/.gitignore
@@ -36,13 +36,11 @@ pip-log.txt
 pip-delete-this-directory.txt
 
 # Unit test / coverage reports
+# N.B. Dont add .coverage as CI builds this to upload.
 htmlcov/
 .tox/
-.coverage
-.coverage.*
 .cache
 nosetests.xml
-coverage.xml
 *,cover
 
 # Translations
