--- a/.github/workflows/nqp_lint_test_write.yml
+++ b/.github/workflows/nqp_lint_test_write.yml
@@ -13,7 +13,7 @@ jobs:
     - uses: actions/checkout@v2
       with:
         fetch-depth: 0
-        ref: ${{ github.event.pull_request.head.ref }}
+        ref: ${{ github.event.pull_request.head.ref }}  # this doesnt work for forks
     - uses: actions/setup-python@v2
       with:
         python-version: 3.8
@@ -39,6 +39,13 @@ jobs:
       if: always()
       run: |
         poetry run python -m black scripts/
+
+    - name: Format with isort
+      if: always()
+      run: |
+        cd scripts
+        poetry run python -m isort -y
+        cd ..
 
     - name: mypy Type Check
       if: always()
