--- a/.github/workflows/nqp_checks.yml
+++ b/.github/workflows/nqp_checks.yml
@@ -1,4 +1,4 @@
-name: NQP - Feature Check - Run Tests (Read)
+name: NQP - Checks
 
 on: push
   branches-ignore: [develop, master]
@@ -6,7 +6,7 @@ on: push
 
 jobs:
   build:
-    name: Run Tests (Read)
+    name: Checks
     runs-on: windows-latest
 
     steps:
@@ -41,3 +41,9 @@ jobs:
       if: always()
       run: |
         poetry run python -m pytest --cov=nqp
+
+    - name: Check Docs Build
+      run: |
+        sphinx-apidoc -o ./docs .
+        cd docs
+        sphinx-build -a -E --keep-going . _build
