prevent pushing pr changes when from fork

--- a/.github/workflows/nqp_pr_review.yml
+++ b/.github/workflows/nqp_pr_review.yml
@@ -58,6 +58,7 @@ jobs:
         poetry run python -m pytest --cov=nqp
 
     - name: Push changes
+      if: github.repository == 'Snayff/notquiteparadise'
       run: |
         git config --global user.name 'snayff'
         git config --global user.email 'snayff@users.noreply.github.com'
