feature/standardise_actions (#26)
* added isort to gh actions

* rename required_tags to target_tags

* created action superclass

* updated contributing guide

* added potency

* added __main__ redirect, updated contribution guide

* update gh actions

* prevent pushing pr changes when from fork

* fixed mypy errors

* setup branch ignore

* ci lint and test

Co-authored-by: snayff <snayff@users.noreply.github.com>

--- a/.github/workflows/nqp_checks.yml
+++ b/.github/workflows/nqp_checks.yml
@@ -1,14 +1,15 @@
-name: NQP - Feature Check - Run Tests (Read)
+name: NQP - Checks
 
-on: push
-  branches-ignore:
-    - 'feature/**'
-    - master
+on:
+  push:
+    branches:
+      - '!develop'
+      - '!master'
 
 
 jobs:
   build:
-    name: Run Tests (Read)
+    name: Checks
     runs-on: windows-latest
 
     steps:
@@ -43,3 +44,9 @@ jobs:
       if: always()
       run: |
         poetry run python -m pytest --cov=nqp
+
+    - name: Check Docs Build
+      run: |
+        sphinx-apidoc -o ./docs .
+        cd docs
+        sphinx-build -a -E --keep-going . _build
