--- a/.sonarcloud.properties
+++ b/.sonarcloud.properties
@@ -6,10 +6,11 @@ sonar.organization=snayff
 #sonar.projectVersion=1.0
 
 # Path is relative to the .sonarcloud.properties file. Replace "\" by "/" on Windows.
-sonar.inclusions=**/scripts/**
+sonar.inclusions=**/scripts/**,**/data/**
 sonar.exclusions=**/docs/**,**/logs/**,.mypy_cache/**,.github/**,assets/**
 sonar.test.inclusions=**/tests/**
-sonar.python.coverage.reportPaths=coverage.xml
+sonar.python.coverage.reportPaths=/tests/_coverage/coverage.xml,tests/_coverage/coverage.xml,\
+  **/tests/_coverage/coverage.xml,**/_coverage/coverage.xml
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
