--- a/.github/workflows/nqp_pr_review.yml
+++ b/.github/workflows/nqp_pr_review.yml
@@ -23,6 +23,7 @@ jobs:
       run: echo "::set-output name=dir::$(pip cache dir)"
 
     - name: Cache dependencies
+      id: cache
       uses: actions/cache@v2
       with:
         path: ${{ steps.pip-cache.outputs.dir }}
@@ -56,7 +57,7 @@ jobs:
     - name: Pytest with Coverage
       if: always()
       run: |
-        poetry run python -m pytest --cov=. --cov-report=xml
+        poetry run python -m pytest --cov=. --cov-report=xml:tests/_coverage/coverage.xml
 
     - name: Update Git
       if: github.repository == 'Snayff/notquiteparadise'
