add sonarcloud action

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,16 +1,12 @@
-# For use when automatic analysis is on. Must be off for coverage.
+# For use when automatic analysis is off. Must be off for coverage.
 
 sonar.projectKey=Snayff_notquiteparadise
 sonar.organization=snayff
 
-# This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=notquiteparadise
-#sonar.projectVersion=1.0
-
 # Path is relative to the .sonarcloud.properties file. Replace "\" by "/" on Windows.
-sonar.inclusions=**/scripts/**,**/data/**
+sonar.sources=**/scripts/**,**/data/**
 sonar.exclusions=**/docs/**,**/logs/**,.mypy_cache/**,.github/**,assets/**
-sonar.test.inclusions=**/tests/**
+sonar.tests=**/tests/**
 sonar.python.coverage.reportPaths=/tests/_coverage/coverage.xml,tests/_coverage/coverage.xml,\
   **/tests/_coverage/coverage.xml,**/_coverage/coverage.xml
 
