--- a/.github/workflows/nqp_pr_review.yml
+++ b/.github/workflows/nqp_pr_review.yml
@@ -23,15 +23,19 @@ jobs:
       run: echo "::set-output name=dir::$(pip cache dir)"
 
     - name: Cache dependencies
-      #id: cache
+      id: cache
       uses: actions/cache@v2
       with:
         path: ${{ steps.pip-cache.outputs.dir }}
         key: ${{ runner.os }}-pip-${{ hashFiles('**/poetry.lock') }}
         restore-keys: ${{ runner.os }}-pip-
 
+    - name: Add poetry to PATH
+      if: steps.cache.outputs.cache-hit == 'true'
+      run: echo "%USERPROFILE%\.poetry\bin" >> $GITHUB_PATH
+
     - name: Install dependencies
-      #if: steps.cache.outputs.cache-hit != 'true'
+      if: steps.cache.outputs.cache-hit != 'true'
       run: |
         python -m pip install --upgrade poetry
         poetry config virtualenvs.create false
