--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,11 +4,11 @@ sonar.projectKey=Snayff_notquiteparadise
 sonar.organization=snayff
 
 # Path is relative to the .sonarcloud.properties file. Replace "\" by "/" on Windows.
-sonar.sources=**/scripts/**,**/data/**
-sonar.exclusions=**/docs/**,**/logs/**,.mypy_cache/**,.github/**,assets/**
-sonar.tests=**/tests/**
-sonar.python.coverage.reportPaths=/tests/_coverage/coverage.xml,tests/_coverage/coverage.xml,\
-  **/tests/_coverage/coverage.xml,**/_coverage/coverage.xml
+sonar.projectBaseDir=.
+sonar.sources=./scripts/**,./data/**
+sonar.exclusions=./docs/**,./logs/**,./.mypy_cache/**,./.github/**,./assets/**
+sonar.tests=./tests/**
+sonar.python.coverage.reportPaths=./tests/_coverage/coverage.xml
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
